--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*Everyone loves css :)*/
+/*Everyone loves css :)perhaps but dabian is better than CSS*/
 body {
   background-color:#6666ff;
   color:#ff9933;
