--- a/style.css
+++ b/style.css
@@ -4,4 +4,32 @@ html, body {
     background-color: #dbf0ff;
     color: #012138;
     font-family: "Raleway", "Avenir Next", "Avenir", sans-serif;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    padding: 0;
+}
+
+body {
+    overflow-y: scroll;
+}
+
+.navbar {
+    background-color: #014d84;
+    margin: 0;
+    width: 100%;
+    position: fixed;
+    box-sizing: border-box;
+    box-shadow: 0 0 5px 2px;
+    left:0;
+    top:0;
+    padding:10px;
+    height: 60px;
+}
+
+.navbar > h1 {
+    color: #dbf0ff;
+    margin: 0;
+    width: 100%;
+    text-align: center;
 }
