--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,7 @@ html, body {
     height: 100%;
     overflow: hidden;
     padding: 0;
+    margin: 0;
 }
 
 body {
@@ -34,6 +35,17 @@ body {
     text-align: center;
 }
 
-.nav-displace {
-    height: 60px;
+.content {
+    text-align: center;
+    margin: 10px;
+    margin-top: 80px;
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
