--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,10 @@
 </head>
 <body>
     <div class="navbar">
-        <h1>Infocomm Smart Classroom</h1>
+        <h1><a href="/">Smart Classroom</a></h1>
     </div>
-    <div class="nav-displace"></div>
+    <div class="content">
     <h1>Homework:</h1>
+    </div>
 </body>
 </html>
