--- a/public/style.css
+++ b/public/style.css
@@ -49,3 +49,19 @@ a {
 a:hover {
     text-decoration: underline;
 }
+
+.login-h1 {
+    font-size: 10vw;
+    margin: 5vw 10vw;
+    color: white;
+}
+
+.login-btn {
+    font-size: 5vw;
+    margin: 0 10vw;
+    border-radius: 2vw;
+    border: none;
+    font-family: inherit;
+    background-color: white;
+    padding: 2vw;
+}
