--- a/views/404.ejs
+++ b/views/404.ejs
@@ -4,9 +4,7 @@
 <%include partials/links%>
 </head>
 <body>
-    <div class="navbar">
-        <h1>Smart Classroom</h1>
-    </div>
+    <%include partials/navbar%>
     <div class="content">
     <h1>404 Not Found</h1>
     <p>Sorry, we couldn't find the page you were looking for.</p>
