--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,7 @@
 <%include partials/links%>
 </head>
 <body>
-    <div class="navbar">
-        <h1><a href="/">Smart Classroom</a></h1>
-    </div>
+    <%include partials/navbar%>
     <div class="content">
     <h1>Homework:</h1>
     </div>
