--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,8 @@
 <body>
     <%include partials/navbar%>
     <div class="content">
-    <h1>Homework:</h1>
+    <h1>Homework in coming week:</h1>
+
     </div>
 </body>
 </html>
